# rust-science

./: Cargo.toml  README.md
examples/: alga.rs  argmin.rs  average.rs  euclid.rs  graphlib.rs  libm.rs  matrixmultiply.rs  nalgebra.rs  ndarray.rs  needletail.rs  nphysics.rs  peroxide.rs  quickcheck.rs  rust_decimal.rs  staticvec.rs  statrs.rs
tests/: quickcheck.rs
