[package]
name = "science"
version = "0.1.0"
authors = ["Klas Segeljakt <klasseg@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
# matrixmultiply = "0.2.3"
rand = "0.7.2"
average = "0.10.3"
euclid = "0.20.7"
# nalgebra = "0.19.0"
approx = "0.3.2"
# nphysics2d = "0.13.0"
# ncollide2d = "0.21.0"
rawkey = "0.1.2"
# ndarray = { version = "0.13.0", features = ["blas"] }
blas-src = { version = "0.2.0", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.6.0", default-features = false, features = ["cblas", "system"] }
libm = "0.2.1"
alga = "0.9.2"
quickcheck = "0.9.0"
quickcheck_macros = "0.8.0"
rust_decimal = "1.1.0"
peroxide = { version = "0.19.3", default-features = false, features = ["plot", "dataframe"] }
statrs = "0.12.0"
criterion = "0.3.0"
# argmin = "0.2.6"
yamakan = "0.1.0"
lapack = "0.16.0"
needletail = "0.3.2"
serde = "1.0.104"
pyo3 = "0.8.5"
graphlib = "0.5.3"
petgraph = "0.5.0"
haybale = "0.1.3"
tflite = "0.7.1"
rust-3d = "0.31.0"
micromath = "1.0.0"
mathru = "0.5.0"
# finql = "0.3.3"
divisors = "0.2.1"
un_algebra = "0.9.0"
# linfa = "0.1.2"
solovay_strassen = "0.1.3"
optimath = "0.2.0"
ultraviolet = "0.4.5"
metered = "0.3.0"
sled = "0.30.3"
dashmap = "2.1.1"
pathfinding = "2.0.3"
rustfft = "3.0.1"
whatlang = "0.7.2"
staticvec = "0.7.7"
grex = "0.3.2"
reciter = "0.1.2"
